# malexpert-api

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  README.md  Rocket.toml
src/: cors.rs  main.rs
src/api/: error.rs  macro.rs  mod.rs  response.rs
src/consts/: bininfo.rs  client.rs  cors.rs  logging.rs  mod.rs  pipeline.rs  secret.rs  upload.rs
src/consts/client/: malexp.rs  mod.rs
src/consts/client/malexp/: events.rs  mod.rs
src/consts/path/: metadata.rs  mod.rs  project.rs
src/crypto/: secret.rs
src/domain/: bininfo.rs  client.rs  metadata.rs  mod.rs  pipeline.rs  sample.rs  signed.rs  usersel.rs
src/domain/json/samples/: mod.rs  run.rs  upload.rs
src/domain/sse/: frame.rs  mod.rs  parser.rs
src/fairings/: logger.rs
src/logging/: formatter.rs  mod.rs  tracing.rs
src/routes/: mod.rs  pipeline.rs  samples.rs  stages.rs
src/routes/jobs/: events.rs  mod.rs
src/routes/samples/: metadata.rs  mod.rs  run.rs  upload.rs
src/services/: analysis.rs  mod.rs  storage.rs
src/services/clients/: mod.rs
src/services/clients/malexp/: catalog.rs  events.rs  mod.rs  run.rs
