[package]
name = "malexpert-api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json"] }
uuid = { version = "1.19.0", features = ["v4"] }
chrono = { version = "0.4.42" }

ring = "0.17.14"
data-encoding = "2.9.0"
